k3s/Chart2/templates/gatewayclass-kong1-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong1-class
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: kong1-class
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart2
    cloudman.io/creator: Anderson-Dutra
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: prod-config
    namespace: gateway
