k3s/Chart2/templates/referencegrant-grant-gateway-to-online-boutique.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-gateway-to-online-boutique
  namespace: online-boutique
  labels:
    app.kubernetes.io/name: grant-gateway-to-online-boutique
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart2
    cloudman.io/creator: Anderson-Dutra
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
