k3s/Chart2/templates/gateway-boutique-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
  labels:
    app.kubernetes.io/name: boutique-gateway
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart2
    cloudman.io/creator: Anderson-Dutra
  namespace: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: kong1-class
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
