k3s/Chart2/templates/httproute-frontend-route-frontend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route-frontend
  namespace: gateway
  labels:
    struct8.io/origin: frontend-route
    app.kubernetes.io/name: frontend-route-frontend
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Chart2
    cloudman.io/creator: Anderson-Dutra
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: boutique-gateway
      namespace: gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          namespace: online-boutique
          port: 80
